# http_server_python

./: .gitignore  README.md  get.http  main.py  post.http  pyproject.toml
app/: handler.py  headers.py  main.py  model.py  request.py  response.py  router.py
app/models/: request.py
http_server_python/: handler.py  headers.py  request.py  router.py
requests/: post.http
tests/: conftest.py  test_request_parser.py
tests/resources/: byte.py
tests/unittests/: test_handler.py  test_request_parser.py  test_response.py  test_router.py
